[AppStream Runner] Also search when there were errors during Pool::load

Summary:
The return code of the Pool::load() method is somewhat misleading, as it
returns true only if there were no errors at all. The error flag is set on the first
validation error, but the pool will contain meaningful data nevertheless.

BUG: 397531

Test Plan:
Searching for "blend"
Unfixed version:
No results are returned under "Software Center"
Fixed version:
Software Center: "Get Blender", "Get Hugin", ...

Reviewers: #plasma, #frameworks, apol

Reviewed By: apol

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D14807